feat: search string with trie tree

--- a/Lotus.xcodeproj/xcshareddata/xcschemes/Lotus.xcscheme
+++ b/Lotus.xcodeproj/xcshareddata/xcschemes/Lotus.xcscheme
@@ -28,6 +28,17 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "BF0DC247292DF96D0061514A"
+               BuildableName = "LotusTrieTests.xctest"
+               BlueprintName = "LotusTrieTests"
+               ReferencedContainer = "container:Lotus.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
